--- a/calendar.html
+++ b/calendar.html
@@ -145,14 +145,14 @@ function init()
 	<div class="navbar navbar-tall">
 		<ul class="top-navbar">
 			<li class="top-navbar-li picture">
-				<a href="index.html"><img src="logo.png"></img></a>
+				<img src="logo.png"></img>
 			</li>
+			<li class="top-navbar-li title">
+                        	<a href="/index.html">Record Robotics</a>
+                	</li>
 			<li class="top-navbar-li">
-	        		<a id="a-about">About</a>
-	        	</li>
-	        	<li class="top-navbar-li">
-	                	<a href="belmontrobotics.github.io#donate">Donate</a>
-	        	</li>
+				<a href="/calendar.html">Calendar</a>
+			</li>
 		</ul>
 	</div>
 
