--- a/calendar.html
+++ b/calendar.html
@@ -145,10 +145,12 @@ function init()
 	<div class="navbar navbar-tall">
 		<ul class="top-navbar">
 			<li class="top-navbar-li picture">
-				<img src="logo.png"></img>
+				<a href="/">
+					<img src="logo.png"></img>
+				</a>
 			</li>
 			<li class="top-navbar-li title">
-                        	<a href="/index.html">Record Robotics</a>
+                        	<a href="/">Record Robotics</a>
                 	</li>
 			<li class="top-navbar-li">
 				<a href="/calendar.html">Calendar</a>
