resize images, various fixes

--- a/index.html
+++ b/index.html
@@ -376,11 +376,32 @@ p.contact-info span {
 }
 
 .project-title {
-	font-size: 20px;
+	font-size: 24px;
 	font-weight: 600;
 	display: block;
 	text-align: center;
 	margin-bottom: 15px;
+}
+
+.project-subtitle {
+	font-size: 20px;
+	font-weight: 600;
+	display: block;
+	text-align: center;
+	margin: 24px 0px 12px 0px;
+}
+
+.awards-list {
+	list-style-type: none;
+	text-align: center;
+	display: block;
+	padding: 6px;
+}
+
+.awards-li {
+	display: block;
+	font-size: 20px;
+	padding: 10px;
 }
 
 @media (max-width: 1000px) {
@@ -964,7 +985,7 @@ function init()
 									<li class="awards-li">The Highest Rookie Seed Award</li> 
 									<li class="awards-li">Rookie Inspiration Award</li>
 								</ul>
-								<span class="project-subtitle">North Shore:</span>
+								<span class="project-subtitle">North Shore Competition:</span>
 								<p>
 									After diving into our competition in Reading, we came in with experience and preparation, fixed up the flaws in our robot, and were ready to win. In each of our matches, we successfully completed all the tasks our robot was designed to do. This resulted in us being picked to compete in the playoffs, and we ended up dominating, beating the other teams with our alliance undefeated, breaking records for points, and winning the competition. We firmly believe this was a result of our dedication and commitment to our mission, and our cooperation with other teams that helped us along the way. Awards won:
 								</p>
