--- a/index.html
+++ b/index.html
@@ -577,7 +577,8 @@ var members =
 	{ name: "Rick Lee", url: "img/indiv_pictures/rick.jpg" },
 	{ name: "Woosung Kwon", url: "img/indiv_pictures/woosung.jpg" },
 	{ name: "Thor Elfarsson", url: "img/indiv_pictures/thor.jpg" },
-	{ name: "Camilla Carere", url: "img/indiv_pictures/camilla.jpg" }
+	{ name: "Camilla Carere", url: "img/indiv_pictures/camilla.jpg" },
+	{ name: "Albert Chen", url: "img/indiv_pictures/AlbertChen.jpg" }
 ];
 
 var mentors =
