Checked to see if text would update

--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,8 @@ function init()
 		</ul>
 		<div class="footer-ack">
 			Website designed and developed by Vassilios Kaxiras
+			<br></br>
+			Codeveloped by Albert Chen
 		</div>
 	</div>
 </div>
