--- a/index.html
+++ b/index.html
@@ -360,6 +360,15 @@
 	border-bottom: 1px solid #ddd;
 }
 
+.content-main-video {
+	padding: 20px 20px 8px 20px;
+}
+
+.content-main-vid {
+	width: 100%;
+	height: 500px;
+}
+
 p.contact-info {
 	line-height: 44px;
 	font-size: 24px;
@@ -878,6 +887,9 @@ function init()
 					</ul>
 				</div>
 				<div class="content-text active" id="content-about" style="opacity:1">
+					<div class="content-main-video">
+						<iframe class="content-main-vid" src="https://www.youtube.com/embed/nYFvpgrPj9k" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					</div>
 					<div class="content-main-title">
 						 <h3>About Us</h3>
 					</div>
