--- a/calendar.html
+++ b/calendar.html
@@ -127,7 +127,7 @@ function init()
 		//}, 2000);
 	//}, 2000);
 
-	calendar = new Calendar($(".calend-wrap"), DISCOVERY_DOCS, API_KEY, CALENDAR_ID);
+//	calendar = new Calendar($(".calend-wrap"), DISCOVERY_DOCS, API_KEY, CALENDAR_ID);
 }
 
 </script>
@@ -165,6 +165,7 @@ function init()
 			</div>
 		</div>
 		<div class="calend-wrap">
+			<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ff0000&amp;src=recordrobotics%40gmail.com&amp;color=%238C500B&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 		</div>
 	</div>
 </div>
