--- a/calendar.html
+++ b/calendar.html
@@ -16,6 +16,10 @@
 
 <style>
 
+body, html {
+	overflow: auto;
+}
+
 .main {
 	width: 100%;
 	text-align: center;
@@ -24,8 +28,8 @@
 .calend {
 	display: inline-block;
 	padding: 10px 60px 10px 60px;
-	margin-top: 140px;
-	margin-bottom: 60px;
+	margin: 140px 20px 60px 20px;
+	min-width: 900px;
 	width: 95%;
 	box-sizing: border-box;
 	max-width: 1100px;
