--- a/calendar.html
+++ b/calendar.html
@@ -17,6 +17,7 @@
 <style>
 
 body, html {
+	height: 100%;
 	overflow: auto;
 }
 
@@ -29,7 +30,6 @@ body, html {
 	display: inline-block;
 	padding: 10px 60px 10px 60px;
 	margin: 140px 20px 60px 20px;
-	min-width: 900px;
 	width: 95%;
 	box-sizing: border-box;
 	max-width: 1100px;
