--- a/calendar.html
+++ b/calendar.html
@@ -30,6 +30,7 @@ body, html {
 	display: inline-block;
 	padding: 10px 60px 10px 60px;
 	margin: 140px 20px 60px 20px;
+	min-width: 900px;
 	width: 95%;
 	box-sizing: border-box;
 	max-width: 1100px;
