--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@ function init()
 	loadPerson(0, "mlist", members);
 	loadPerson(0, "mtlist", mentors);
 
-	var overlayImgs = document.getElementsByClassName("content-img-wrap");
+	var overlayImgs = document.getElementsByClassName("content-img");
 	for (var i = 0; i < overlayImgs.length; i++)
     {
         overlayImgs[i].addEventListener("click", function(evt) {
@@ -915,7 +915,7 @@ function off() {
 							</div>
 							<div class="content-div content-div-img">
 								<div class="content-img-wrap">
-									<img class="content-img" src="img/team_pictures/group.jpg" onclick="on1();">
+									<img class="content-img" src="img/team_pictures/group.jpg">
 									<div class="content-img-info">Reading, MA competition (2017)</div>
 								</div>
 							</div>
