--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@ function off() {
 
 <body onload="init()" class="loading">
 <div id="overlay" onclick="off();">
-	<div id="img-overlay"><img id = "overlayPic" style="width: 100%"></div>
+	<div id="img-overlay"></div>
 </div>
 <div class="navbar navbar-tall">
 	<ul class="top-navbar">
