--- a/index.html
+++ b/index.html
@@ -321,6 +321,10 @@
 	max-width: 550px;
 }
 
+.content-img-wrap:hover {
+    cursor: pointer;
+}
+
 .content-img {
         width: 100%;
         height: auto;
@@ -866,7 +870,7 @@ function off() {
 </head>
 
 <body onload="init()" class="loading">
-<div id="overlay" onclick="off();">
+<div id="overlay" onclick="off()">
 	<div id="img-overlay"></div>
 </div>
 <div class="navbar navbar-tall">
