readd background image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ background: white;
 }
 
 #top-img {
-0background: url("img/team_pictures/team_win_large.jpg") no-repeat 50% 50% fixed;
+background: url("img/team_pictures/team_win_large.jpg") no-repeat 50% 50% fixed;
              -webkit-background-size: cover;
              -moz-background-size: cover;
              -o-background-size: cover;
